Fixes CSS styles collapsing

--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -36,6 +36,7 @@
     font-size: 1.5rem;
     color: black;
     text-align: center;
+    text-shadow: 1px 3px 12px rgba(150, 150, 150, 1);
 }
 
 .tag, .location {
