--- a/src/components/Statistics/Statistics.css
+++ b/src/components/Statistics/Statistics.css
@@ -1,4 +1,4 @@
-.title {
+.stat-title {
     width: 400px;
     margin: 0 auto 1rem;
 
@@ -22,16 +22,19 @@
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 
-.item {
+.stat-item {
     display: flex;
     flex-direction: column;
+
+    font-size: 0.8rem;
+    color: gray;
 }
 
-.item:nth-child(2n) {
+.stat-item:nth-child(2n) {
     background-color: rgba(232, 228, 228, 0.5);
 }
 
-.label {
+.stat-label {
     height: 2rem;
     padding-top: 4px;
     margin: 0;
@@ -39,9 +42,12 @@
     text-align: center;
 }
 
-.percentage {
+.stat-percentage {
     height: 2rem;
     padding-top: 0.5rem;
     margin: 0;
+
+    font-size: 1rem;
     text-align: center;
+    color: #000;
 }
